# PexPOC

./: .gitignore  README.md  entrypoint.sh  pyproject.toml
base/: ipc.py
model/: pyproject.toml
model/model/: main.py
