[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["BP Greyling <bernard@rampgrowth.com>"]
packages = [{include = "base"}]

[tool.poetry.dependencies]
python = "~3.11"
polars = "^0.19.19"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
dill = "^0.3.7"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
pex = "^2.1.153"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
